@@ -21,11 +21,14 @@ alert you out-of-the-box:
 [width="100%",cols="3",frame="none",grid="none"]
 |=====
 | image:.images/alerts/mail.png[Mail icon] E-mail
+| image:.images/alerts/msteams.png[Microsoft Teams icon] Microsoft Teams
 | image:.images/alerts/phone.png[Phone icon] Phone call (via Twilio)
 | image:.images/alerts/pushover.png[Pushover logo] Pushover
 | image:.images/alerts/slack.png[Slack logo] Slack
 | image:.images/alerts/sms.png[SMS icon] SMS (via Twilio)
 | image:.images/alerts/webhook.png[Webhook logo] Webhook
+|
+|
 |=====
 
 **Lightweight**: Goplum has a small resource footprint, and all
@@ -171,6 +174,10 @@ documentation, that explains how its checks and alerts need to be configured.
 | link:plugins/heartbeat[heartbeat]
 | received
 | -
+
+| link:plugins/msteams[msteams]
+| -
+| message
 
 | link:plugins/pushover[pushover]
 | -
