@@ -56,6 +56,16 @@ alert http.webhook "webhook" {
 }
 
 # ---------------------------------------------------------------------------------------------------------------------
+# Microsoft Teams plugin
+# ---------------------------------------------------------------------------------------------------------------------
+
+alert msteams.message "teams" {
+  url = "https://outlook.office.com/webhook/...../IncomingWebhook/....."
+  title = "Service alert"                   # optional (default = Goplum alert)
+  theme = "#ff0000"                         # optional (default = #6c2b8f)
+}
+
+# ---------------------------------------------------------------------------------------------------------------------
 # Network plugin
 # ---------------------------------------------------------------------------------------------------------------------
 
