@@ -1,0 +1,25 @@
+= Microsoft Teams plugin
+:toc: macro
+
+The msteams plugin provides alerts that send messages to Microsoft Teams channels.
+
+== Alerts
+
+=== msteams.message
+
+[source,goplum]
+----
+alert msteams.message "example" {
+  url = "https://outlook.office.com/webhook/...../IncomingWebhook/....."
+  title = "Service alert"
+  theme = "#ff0000"
+}
+----
+
+Sends a Teams message via an Incoming Webhook connector. See
+https://docs.microsoft.com/en-us/microsoftteams/platform/webhooks-and-connectors/how-to/add-incoming-webhook#add-an-incoming-webhook-to-a-teams-channel[the Microsoft documentation]
+for how to add an Incoming Webhook connector.
+
+The `title` and `theme` parameters are optional. Title defaults to
+"Goplum alert". The theme parameter controls the colour scheme of
+the message, and defaults to "#6c2b8f".
